# makemore

./: .gitignore  README.md  pyproject.toml
nbs/: 01-bigram.ipynb  02-neural-network.ipynb  03-neural-net-contd.ipynb
nbs/.ipynb_checkpoints/: 01-bigram-checkpoint.ipynb
