[project]
name = "makemore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
